generated/checkers/refine/KN-Integer-Overflow-c09d2eff-0/build_logs/syntax-repair-refine-1-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isDirectWidenedUseTo64(const clang::Expr*, clang::ento::CheckerContext&, const clang::Stmt*&, const clang::Decl*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:140:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  140 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(PStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:194:9: error: ‘Optional’ was not declared in this scope; did you mean ‘clang::ObjCImplementationControl::Optional’?
  194 |     if (Optional<nonloc::ConcreteInt> CI = V.getAs<nonloc::ConcreteInt>()) {
      |         ^~~~~~~~
      |         clang::ObjCImplementationControl::Optional
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprObjC.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclObjC.h:118:56: note: ‘clang::ObjCImplementationControl::Optional’ declared here
  118 | enum class ObjCImplementationControl { None, Required, Optional };
      |                                                        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:194:37: error: expected primary-expression before ‘>’ token
  194 |     if (Optional<nonloc::ConcreteInt> CI = V.getAs<nonloc::ConcreteInt>()) {
      |                                     ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:194:39: error: ‘CI’ was not declared in this scope; did you mean ‘C’?
  194 |     if (Optional<nonloc::ConcreteInt> CI = V.getAs<nonloc::ConcreteInt>()) {
      |                                       ^~
      |                                       C
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeSizeContext(const clang::Stmt*, const clang::Decl*, const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:301:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  301 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeNonSizeEncodingContext(const clang::Stmt*, const clang::Decl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:351:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  351 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
